clients/java: Formatter